# zenith

./: AGENTS.md  CITATION.cff  NARS_DRY_INTEGRATE_SUMMARY.md  NARS_ZENITH_THERBLIG_INDEX.md  README.md  pr_description.md  pre_commit.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: MISSION_DRY_INTEGRATE_JN_BENEFITS.md  NARS_10LINE_STRICT_CONTRACT.md  SOLID_SINGLE_PR_COMPROMISE.md
example/angry-bird/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
example/angry-bird/docs/: audio-credits.md
example/angry-bird/scripts/: run_strategy.js
technical_report/: from_ralph_to_zenith_brand.tex
zenith/: .gitignore  .mcp.json  .mcp.json.sample  AGENTS.md  README.md  pyproject.toml  test_new_features.py
zenith/.claude/: skills
zenith/.zenith_home/projects/proj1/.zenith-runtime/missions/miss1/: contract-state.json
zenith/docs/: zenith_spec.md
zenith/src/zenith_harness/: __init__.py  __main__.py  acp_runner.py  assets.py  attention.py  cli.py  config.py  contractreifier.py  controller.py  coordinator.py  dispatcher.py  envelope.py  jules_acp_bridge.py  jules_acp_worker.py  missiondata.py  models.py  providers.py  server.py  storage.py  task_list_patch.py  task_validation.py
zenith/src/zenith_harness/bundled/prompts/_shared/: directives.md
zenith/src/zenith_harness/bundled/prompts/orchestrator/: hermes_addendum.md  system_prompt.md
zenith/src/zenith_harness/bundled/prompts/terminal-reviewer/: system_prompt.md
zenith/src/zenith_harness/bundled/prompts/validator/: system_prompt.md  template.md
zenith/src/zenith_harness/bundled/prompts/worker/: system_prompt.md  template.md
zenith/src/zenith_harness/bundled/providers/codex/agents/: flow-validator.toml
zenith/src/zenith_harness/bundled/providers/jules/agents/: contract-review.toml  feature-reviewer.toml  flow-validator.toml  investigator.toml
zenith/src/zenith_harness/bundled/skills/engineering-mission-playbook/: SKILL.md
zenith/tests/: conftest.py  mock_acp_agent.py  test_acp_runner.py  test_acp_sandbox.py  test_assets.py  test_cli.py  test_config.py  test_coordinator.py  test_coordinator_parallel.py  test_dispatcher.py  test_envelope.py  test_harness_improvements.py  test_jules_acp_bridge.py  test_jules_bijective_nonblocking.py  test_jules_clarification_gate.py  test_jules_conductor_track_record.py  test_jules_mailbox.py  test_jules_provider.py  test_jules_pushed_branch.py  test_models.py  test_nars_summarization.py  test_runnable_selection.py  test_server.py  test_smoke_parallel_acp.py  test_smoke_real_acp.py  test_smoke_zai_claude.py  test_storage.py  test_supersede_chain.py  test_task_list_patch.py  test_task_validation.py  test_terminal_review.py
zenith/tests/.graveyard/: test_jules_bijective_nonblocking.py  test_jules_clarification_gate.py  test_jules_conductor_track_record.py  test_jules_mailbox.py  test_jules_provider.py  test_jules_pushed_branch.py
(+120 files in other folders)
