[project]
name = "zenith-harness"
version = "0.1.0"
description = "Turn any coding agent into a mission orchestration system via MCP and ACP."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Intelligent Internet" }]
keywords = [
    "ai-agents",
    "agent-harness",
    "orchestration",
    "mcp",
    "acp",
    "model-context-protocol",
    "agent-client-protocol",
    "claude-code",
    "codex",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
]

[project.urls]
Homepage = "https://github.com/Intelligent-Internet/zenith"
Repository = "https://github.com/Intelligent-Internet/zenith"
Issues = "https://github.com/Intelligent-Internet/zenith/issues"
"Technical Report" = "https://github.com/Intelligent-Internet/zenith/blob/main/technical_report/Technical_Report.pdf"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zenith_harness = ["bundled/**/*", "py.typed"]

[project.scripts]
zenith = "zenith_harness.cli:cli"
zenith-server = "zenith_harness.server:main"
jules-acp-bridge = "zenith_harness.jules_acp_bridge:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.0",
    "ruff>=0.4",
    "pytest-mock>=3.15.1",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
